--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
        
         <div class="hero-content">
-            <h1>Curso Web Fundamentos</h1>
+            <h1>Curso Web Fundamentos - Teste</h1>
 
             <p>Aprenda HTML, CSS e Javascript</p>
 
