Alterações com display:block e inline-block

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 
             <section class="content-section">
                 
-                    <div class="card">
+                    <div class="card card-1">
                         <img src="imagens/card_01.png" alt="">
                         <p>Seletores</p>
                     </div>
                    
-                    <div class="card">
+                    <div class="card card-2">
                         <img src="imagens/card_02.jpg" alt="">
                         <p>Posicionamento</p>
                     </div>
@@ -51,7 +51,7 @@
                         <p>Fontes e ícones</p>
                     </div>
             </section>
-            <section class="content-section">
+            <section class="content-section card-3">
                         <article>
                             <header class="titulo-inicio">
                                 <h2>Título</h2>
